# python-ai-agent-real-project-demo

./: .gitignore  01-min-framework.md  02-basic-knowledge.md  04-chapter-1-async.md  05-chapter-2.md  06-chapter-3-project-config.md  98-changelog.md  99-unimplemented-module.md
playground/: exp1_queue.py  exp2_contextvars.py  exp3_sse.py  exp4_langchain_stream.py
src/todo-agent/: .env.example  README.md  (+4 more)
src/todo-microsoft-agent/src/: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/todo-microsoft-agent/src/app/: context_providers.py  dependencies.py  mcp_server.py  middleware.py
src/todo-microsoft-agent/src/app/agent/: todo_agent.py  tools.py
src/todo-microsoft-agent/src/app/domain/: errors.py  models.py
src/todo-microsoft-agent/src/app/entities/smart_todo_graph/: __init__.py
src/todo-microsoft-agent/src/app/entities/todo_agent/: __init__.py
src/todo-microsoft-agent/src/app/repositories/: base.py  memory_todo_repo.py
src/todo-microsoft-agent/src/app/scripts/: run_checkpoint.py  run_context_provider.py  run_delete_hitl.py  run_mcp_client.py  run_middleware.py  run_smart_todo.py  run_summary.py
src/todo-microsoft-agent/src/app/services/: todo_service.py
src/todo-microsoft-agent/src/app/workflows/: delete_todo_hitl.py  smart_todo.py  smart_todo_graph.py  today_summary.py
src/todo-microsoft-agent/src/checkpoints/: 4cf30895-c250-4f07-a1b3-6c3b171d8861.json  bf7e10cf-b9c9-41b3-94d3-50b70f22e9dc.json
src/todo-microsoft-agent/src/tests/: run_smart_todo_graph.py  test_agent_tools.py  test_smart_todo_workflow.py  test_todo_service.py
(+30 files in other folders)
