[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-microsoft-agent"
version = "0.1.0"
description = "Todo Agent built with Microsoft Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "agent-framework",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]